automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <html>
     <head>
       <meta charset="utf-8">
-      <title></title>
+      <title>The Picnic That Changed My Life</title>
     </head>
     <body>
       Vicky is invincible. She is the bomb!!!
