automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
       <title>The Picnic That Changed My Life</title>
     </head>
     <body>
-      Vicky is invincible. She is the bomb!!!
+      Superman!!!
     </body>
   </html>
